# chat-client

./: .dockerignore  .docs-manifest.yml  .env.example  .gitignore  .gitmodules  .publish-exclude  AGENT-LESSONS.md  BUILD.md  CHANGELOG.md  CONTEXT-SUMMARY.md  Dockerfile.chat-client  Dockerfile.public  EXTERNAL-BUILD.md  EXTERNAL-CLONE-SELF-CONTAINED.md  Example-MCP-Server.Dockerfile  LICENCE  NOTICE  PUBLICATION-SMOKE.md  README.md  RULES.md  config.yaml  conftest.py  defaults.yaml  docker-build-example-mcp-server.sh  docker-build.sh  docker-compose.chat-client.yml  docker-env.public.example  env-docker-example  env-example  fix.sh  local-docker-server.sh  pip.conf.docker  placeholder.pub  pyproject.toml  pytest.ini  requirements-npm.EXCEPTION.md  requirements.txt  server_control.sh  start_a2a_server.py  start_api_server.py  (+2 more)
database/migrations/cloud_dog_db/: README.md  env.py
docker/: chat-client.env.example  docker.env.example  file-mcp.env.example
docs/: A2A-REFERENCE.md  API-REFERENCE.md  ARCHITECTURE.md  AUDIT-EVENTS.md  BUILD.md  DATA-MODEL.md  DEPLOY.md  DOCKER.md  ENV-REFERENCE.md  MCP-REFERENCE.md  PARAMETERS.md  PREPROD.md  RELEASE-1.0RC01.md  REQ-COVERAGE.md  REQUIREMENTS.md  ROLES-AND-USECASES.md  TEST-HISTORY.md  TEST-STATUS.md  TESTS.md  WARRANTY-1.0RC01.md  WEBUI-REFERENCE.md  openapi.json
migration/verify/: README.md  verify-chat-client-API-KIT.sh  verify-chat-client-CONFIG.sh  verify-chat-client-DB.sh  verify-chat-client-IDAM.sh  verify-chat-client-LLM.sh  verify-chat-client-LOGGING.sh
migrations/versions/: chat_0001_initial.py
scripts/: docker-entrypoint.chat-client.sh  file-mcp-docker-runtime-control.sh  healthcheck-chat-client.sh  install-chat-client.sh  publish_before_pin_guard.py  run-chat-client.sh  validate-vault.sh  verify-docker-containerization-chat-client.sh
src/cloud_dog_chat_client/: __init__.py  _runtime.py  storage_fs.py  ui_spa.py
src/cloud_dog_chat_client/agent/: __init__.py  adapters.py  runtime.py  strategy.py
src/cloud_dog_chat_client/api/: auth.py  config_admin.py  routes.py  server.py  upload_safety.py
src/cloud_dog_chat_client/cli/: __main__.py  app.py  interactive.py
src/cloud_dog_chat_client/clients/: __init__.py  code_runner.py
src/cloud_dog_chat_client/config/: __init__.py  adapter.py  provenance.py
src/cloud_dog_chat_client/database/: __init__.py  config_store.py  db_config.py  models.py  runtime.py  store.py
src/cloud_dog_chat_client/jobs/: __init__.py  runtime.py
src/cloud_dog_chat_client/llm/: __init__.py  ollama_provider.py  openai_compat_provider.py  protocols.py  providers.py  response_policy.py  service.py
src/cloud_dog_chat_client/mcp/: __init__.py  client.py  conformance.py  connection.py  output_reducer.py  protocols.py
src/cloud_dog_chat_client/observability/: http_audit.py
src/cloud_dog_chat_client/prompts/: __init__.py
src/cloud_dog_chat_client/servers/: __init__.py  a2a_server.py  api_server.py  common.py  mcp_server.py  web_flat_roles.py  web_server.py
src/cloud_dog_chat_client/session/: __init__.py  session_manager.py  transcript.py
src/cloud_dog_chat_client/test_harness/: __init__.py  runtime.py
src/cloud_dog_chat_client/utils/: __init__.py  logger.py
tests/: INFRASTRUCTURE.md  SCOPE-MAP.md  conftest.py
tests/application/AT1.10_FileArtifactsDeterminism/: test_file_artifacts_determinism.py
tests/application/AT1.12_MessageFileOperations/: test_message_file_operations.py
tests/application/AT1.13_SearchMCPNewsSummaryUIAssist/: test_searchmcp_news_summary_ui_assist.py
tests/application/AT1.14_SearchNewsHungarianBridge/: test_search_news_hungarian_bridge.py
tests/application/AT1.15_HungarianTranslatorHardFailure/: test_hungarian_translator_hard_failure.py
tests/application/AT1.16_Fail2banEmailAnalysis/: test_fail2ban_email_analysis.py
tests/application/AT1.17_UkrainianNewsBriefing/: test_ukrainian_news_briefing.py
tests/application/AT_WEBUI_E2E/: test_webui_e2e.py
tests/e2e/: test_w28a751_t1_t3_live_idam.py
tests/fixtures/: TEST-PACK-REFERENCE.md
tests/helpers/: api_mcp.py  api_server.py  cross_project.py  docker_runner.py  file_mcp_runtime.py  git_safe_directory.config  mcp_conformance.py  ollama_preflight.py  w28a751_live.py
tests/integration/: __init__.py
tests/smoke/: test_w28a751_t0_live_smoke.py
tests/unit/: test_imap_intent_routing.py
(+140 files in other folders)
