[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-dog-chat-client"
version = "0.1.1RC1"
description = "Cloud-Dog CLI chat client with optional MCP (HTTP/SSE) support"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
  { name = "Cloud-Dog, Viewdeck Engineering Limited" }
]
dependencies = [
  "cloud_dog_config>=0.3.1",
  "cloud_dog_logging>=0.3.3",
  "cloud_dog_api_kit==0.13.0",
  "cloud_dog_idam>=0.5.2,<0.6",
  "cloud_dog_llm>=0.3.1",
  "cloud-dog-agent==0.2.0",
  "cloud_dog_cache>=0.2.0",
  "cloud_dog_db>=0.1.0",
  "cloud_dog_jobs>=0.3.0",
  "cloud-dog-storage>=0.1.1",
  "pyyaml==6.0.1",
  "httpx==0.27.2",
  "pydantic==2.12.3",
  "pydantic-settings==2.11.0",
  "typer==0.12.5",
  "click==8.1.7",
  "rich==13.9.4",
  "fastapi==0.115.12",
  "python-multipart==0.0.20",
  "uvicorn[standard]==0.38.0",
  "hvac==2.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.5",
  "pytest-asyncio==0.25.3",
  "playwright>=1.44.0",
]

[project.scripts]
cloud-dog-chat = "cloud_dog_chat_client.cli.app:main"
chat-client = "cloud_dog_chat_client.cli.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cloud_dog_chat_client = ["api/webui.html", "api/login.html"]

[tool.pytest.ini_options]
markers = [
    "llm: requires live LLM endpoint (Ollama/OpenRouter)",
    "vdb: requires vector database (Chroma/Qdrant/OpenSearch)",
    "db: requires relational database (MySQL/PostgreSQL)",
    "smtp: requires SMTP/IMAP service",
    "mcp: requires external MCP server(s)",
    "docker: requires Docker build/run",
    "pure: no external dependencies",
    "fast: completes in <10 seconds",
    "slow: takes 10-120 seconds",
    "heavy: takes >120 seconds",
    "quality: QT tier",
    "unit: UT tier",
    "system: ST tier",
    "integration: IT tier",
    "application: AT tier",
]

[project.urls]
"Source" = "https://github.com/cloud-dog-ai/chat-client"
