[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-dog-chat-client"
version = "0.1.1RC1"
description = "Cloud-Dog CLI chat client with optional MCP (HTTP/SSE) support"
requires-python = ">=3.13"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
  { name = "Cloud-Dog, Viewdeck Engineering Limited" }
]
dependencies = [
  "cloud_dog_config==0.3.5",
  "cloud_dog_logging==0.4.1",
  "cloud_dog_api_kit==0.14.1",
  "cloud_dog_idam==0.5.4",
  "cloud_dog_llm==0.4.4",
  "cloud-dog-agent==0.3.2",
  "cloud_dog_cache==0.2.3",
  "cloud_dog_db==0.3.3",
  "cloud_dog_jobs==0.4.4",
  "cloud-dog-storage==0.1.8",
  "pyyaml==6.0.3",
  "httpx==0.28.1",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "typer==0.26.8",
  "click==8.4.2",
  "rich==15.0.0",
  "fastapi==0.139.0",
  "starlette==1.3.1",
  "python-multipart==0.0.32",
  "uvicorn[standard]==0.51.0",
  "hvac==2.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest==9.1.1",
  "pytest-asyncio==1.4.0",
  "pytest-timeout==2.4.0",
  "playwright==1.61.0",
  "ruff==0.15.21",
]

[tool.ruff]
target-version = "py313"

[project.scripts]
cloud-dog-chat = "cloud_dog_chat_client.cli.app:main"
chat-client = "cloud_dog_chat_client.cli.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cloud_dog_chat_client = ["api/webui.html", "api/login.html"]

[tool.pytest.ini_options]
markers = [
    "llm: requires live LLM endpoint (Ollama/OpenRouter)",
    "vdb: requires vector database (Chroma/Qdrant/OpenSearch)",
    "db: requires relational database (MySQL/PostgreSQL)",
    "smtp: requires SMTP/IMAP service",
    "mcp: requires external MCP server(s)",
    "docker: requires Docker build/run",
    "pure: no external dependencies",
    "fast: completes in <10 seconds",
    "slow: takes 10-120 seconds",
    "heavy: takes >120 seconds",
    "quality: QT tier",
    "unit: UT tier",
    "system: ST tier",
    "integration: IT tier",
    "application: AT tier",
]

[project.urls]
"Source" = "https://github.com/cloud-dog-ai/chat-client"
